force-app/main/default/objects/MyObject__c/fields/TrackedField__c.field-meta.xml
<CustomField>
    <fullName>TrackedField__c</fullName>
    <label>TrackedField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>