force-app/main/default/objects/MyObject__c/fields/TrackedObject__c.field-meta.xml
<CustomField>
    <fullName>TrackedObject__c</fullName>
    <label>TrackedObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>